added foodData array object from pizzahut website

--- a/mern-ecommerce-food-site-client/src/index.css
+++ b/mern-ecommerce-food-site-client/src/index.css
@@ -1,3 +1,8 @@
+:root {
+  --smallDeviceSize: 600px;
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
