--- a/mern-ecommerce-food-site-client/src/components/product/product.css
+++ b/mern-ecommerce-food-site-client/src/components/product/product.css
@@ -50,14 +50,14 @@
   font-size: 1.5rem;
 }
 
-.productB {
+.productButton {
   background-color: #0a8020;
   color: white;
   width: 80%;
-  height: 15%;
+  height: 8%;
+
   border-radius: 15px;
-  margin-top: 5%;
-  margin-bottom: 5%;
+  margin-top: 12%;
 
   font-size: 1.5rem;
 }
