--- a/mern-ecommerce-food-site-client/src/components/product/product.css
+++ b/mern-ecommerce-food-site-client/src/components/product/product.css
@@ -40,14 +40,19 @@
   padding-left: 5%;
   padding-top: 2%;
 
+  font-weight: bold;
   font-size: 1.5rem;
 }
 
 .productP {
   align-self: flex-start;
   padding-left: 5%;
-  padding-top: 2%;
+  /* padding-top: 1%; */
+
+  height: 100px;
   font-size: 1.5rem;
+
+  overflow: hidden;
 }
 
 .productButton {
@@ -57,7 +62,9 @@
   height: 8%;
 
   border-radius: 15px;
-  margin-top: 12%;
+  margin-top: 5%;
 
   font-size: 1.5rem;
+
+  justify-self: flex-end;
 }
