--- a/mern-ecommerce-food-site-client/src/components/productZoomed/productZoomed.css
+++ b/mern-ecommerce-food-site-client/src/components/productZoomed/productZoomed.css
@@ -189,6 +189,31 @@
   margin-right: 8%;
 }
 
+.pZExtraQuantityCont {
+  margin: 0;
+  padding: 0;
+
+  height: 20%;
+  width: 100%;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  margin-top: 20px;
+}
+
+.pZExtraQuantityCont>label {
+  font-size: 1.5rem;
+}
+
+.pZExtraQuantityCont>select {
+  width: 3rem;
+  height: 2rem;
+
+  margin-right: 8%;
+}
+
 .ProductZoomedCustomiseRightCont {
   margin: 0;
   padding: 0;
@@ -217,11 +242,11 @@
   margin-bottom: 5vh;
 }
 
-.ProductZoomedCustomiseRightTotal {
+/* .ProductZoomedCustomiseRightTotal {
   position: absolute;
-  top: 75%;
-  right: 8%;
-}
+  top: 60%;
+  right: 7%;
+} */
 
 @media (min-width: 600px) {
   .ProductZoomedCustomiseRightTotal {
