--- a/mern-ecommerce-food-site-client/src/components/navbar/navbarComp.css
+++ b/mern-ecommerce-food-site-client/src/components/navbar/navbarComp.css
@@ -1,6 +1,207 @@
 .navbarMcomp {
+  margin: 0;
+  padding: 0;
+
   position: fixed;
+  top: 0;
+
   width: 100vw;
+  height: 40px;
+
+  background-color: #f8f9fa;
+  border-bottom: 1px solid black;
+}
+
+.navbarLinkListCont {
+  margin: 0;
+  padding: 0;
+
+  width: 50vw;
+  height: 100%;
+
+  /* border: 1px solid green; */
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+
+
+.navbarLogoCont {
+  margin: 0;
+  padding: 0;
+  margin-left: 55px;
+}
+
+@media (min-width: 850px) {
+  .navbarLogoCont {
+    margin: 0;
+    padding: 0;
+    margin-left: 10px;
+  }
+}
+
+.navbarLogoImage {
+  margin: 0;
+  padding: 0;
+  width: 150px;
+}
+
+.navbarLinkContLarge {
+  display: none;
+}
+
+@media (min-width: 850px) {
+  .navbarLinkContLarge {
+    margin: 0;
+    padding: 0;
+
+    margin-left: 40px;
+    height: 100%;
+
+    display: flex;
+
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    gap: 10%;
+  }
+}
+
+
+
+.navbarLink {
+  font-size: 1.2rem;
+  color: #747474;
+  cursor: pointer;
+  list-style: none;
+}
+
+.navbarSearchCont {
+  display: none;
+}
+
+
+.navbarSearchContSearch {
+  /* width: 200px; */
+}
+
+@media (min-width: 850px) {
+  .navbarSearchCont {
+    margin-left: 60px;
+    width: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    /* border: 1px solid blue; */
+  }
+}
+
+.navbarSearchIcon {
+  margin: 0;
+  padding: 0;
+
+  margin-left: 10px;
+  font-size: 1.5rem;
+
+  cursor: pointer;
+}
+
+.navbarCartIcon {
+  margin: 0;
+  padding: 0;
+
+  position: absolute;
+  top: 08px;
+  right: 90px;
+
+  font-size: 1.5rem;
+
+  cursor: pointer;
+}
+
+.navbarBurgerIcon {
+  margin: 0;
+  padding: 0;
+
+  position: absolute;
+  top: 08px;
+  left: 15px;
+
+  font-size: 1.5rem;
+
+  cursor: pointer;
+}
+
+@media (min-width: 850px) {
+  .navbarBurgerIcon {
+    display: none;
+  }
+}
+
+.navbarUserIcon {
+  margin: 0;
+  padding: 0;
+
+  position: absolute;
+  top: 08px;
+  right: 35px;
+
+  font-size: 1.5rem;
+
+  cursor: pointer
+}
+
+.navbarSideCont {
+  width: 70vw;
+  height: 90vh;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+
+  background-color: #f8f9fa;
+  border-bottom: 1px solid black;
+}
+
+@media (min-width: 850px) {
+  .navbarSideCont {
+    display: none;
+  }
+}
+
+.navbarSearchContSmall {
+  margin-top: 30px;
+  margin-left: 30px;
+}
+
+@media (min-width: 850px) {
+  .navbarSearchContSmall {
+    display: none;
+  }
+}
+
+.navbarLinkContSmall {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+
+  margin-top: 30px;
+
+  gap: 10px;
+
+  font-size: 2.5rem;
+}
+
+.navbarLinkSmall {
+  font-size: 2rem;
+
+  color: #747474;
+  cursor: pointer;
+  list-style: none;
 }
 
 .mr {
