--- a/mern-ecommerce-food-site-client/src/components/productZoomed/productZoomed.css
+++ b/mern-ecommerce-food-site-client/src/components/productZoomed/productZoomed.css
@@ -4,10 +4,11 @@
   width: 97%;
   height: 95vh;
 
-  top: 2%;
+  /* padding-top: 40px; */
+  top: 40px;
   left: 1.5%;
 
-  border: 1px solid black;
+  /* border: 1px solid black; */
   background-color: white;
 }
 
@@ -51,7 +52,7 @@
   padding-top: 2%;
   padding-left: 2%;
 
-  border: 1px solid black;
+  /* border: 1px solid black; */
 
   width: 75%;
   height: 80%;
@@ -254,4 +255,23 @@
     top: 75%;
     right: 10%;
   }
+}
+
+.ProductZoomedCheckoutButtonCont {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ProductZoomedCheckoutButton {
+  background-color: green;
+  color: white;
+  font-weight: bold;
+
+  margin-top: 70px;
+
+  width: 150px;
+  height: 5vh;
+
+  border-radius: 15px;
 }
