--- a/mern-ecommerce-food-site-client/src/components/navbar/navbarComp.css
+++ b/mern-ecommerce-food-site-client/src/components/navbar/navbarComp.css
@@ -159,8 +159,35 @@
   cursor: pointer
 }
 
+.navbarUserMenuCont {
+  position: absolute;
+  top: 40px;
+  right: 30px;
+
+  width: 100px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  /* height: 100px; */
+  background-color: #f8f9fa;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  border-radius: 5px;
+}
+
+.navbarUserMenuItem {
+  height: 30px;
+  cursor: pointer;
+
+  font-size: 1.5rem;
+  color: #747474;
+}
+
 .navbarSideCont {
-  width: 70vw;
+  width: 80vw;
   height: 90vh;
 
   display: flex;
@@ -170,6 +197,8 @@
 
   background-color: #f8f9fa;
   border-bottom: 1px solid black;
+
+  z-index: +1;
 }
 
 @media (min-width: 850px) {
