--- a/mern-ecommerce-food-site-client/src/components/product/product.css
+++ b/mern-ecommerce-food-site-client/src/components/product/product.css
@@ -5,6 +5,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  box-sizing: border-box;
 }
 
 /* small devices */
@@ -36,13 +38,21 @@
   height: 60%;
 }
 
+/* small devices */
+@media (max-width: 600px) {
+  .productImg {
+    width: 100%;
+    height: 50%;
+  }
+}
+
 .productH1 {
   align-self: flex-start;
   padding-left: 5%;
-  padding-top: 2%;
+  padding-top: 3%;
 
   font-weight: bold;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
 }
 
 .productP {
@@ -50,9 +60,10 @@
   padding-left: 5%;
   /* padding-top: 1%; */
 
-  height: 100px;
-  font-size: 1.5rem;
+  height: 120px;
+  font-size: 1.2rem;
 
+  /* border: 1px solid black; */
   overflow: hidden;
 }
 
@@ -63,9 +74,26 @@
   height: 8%;
 
   border-radius: 15px;
-  margin-top: 5%;
+  /* margin-top: 20px; */
 
   font-size: 1.5rem;
 
   justify-self: flex-end;
+}
+
+/* small devices */
+@media (max-width: 600px) {
+  .productButton {
+    background-color: #0a8020;
+    color: white;
+    width: 80%;
+    height: 8%;
+
+    border-radius: 15px;
+    margin-top: 70px;
+
+    font-size: 1.5rem;
+
+    justify-self: flex-end;
+  }
 }
