--- a/mern-ecommerce-food-site-client/src/pages/signUp/signUp.css
+++ b/mern-ecommerce-food-site-client/src/pages/signUp/signUp.css
@@ -25,6 +25,16 @@
   /* border: 1px solid black; */
 }
 
+.signUpTopMsg {
+  width: 100vw;
+
+  font-size: 1.2rem;
+  color: #c80f2e;
+
+  display: flex;
+  justify-content: center;
+}
+
 .signUpCont>label {
   align-self: flex-start;
   margin-left: 10px;
@@ -69,6 +79,7 @@
   width: 100vw;
 
   margin-top: 30px;
+  padding-bottom: 30px;
 
   font-size: 1.2rem;
   color: #c80f2e;
