--- a/mern-ecommerce-food-site-client/src/pages/login/login.css
+++ b/mern-ecommerce-food-site-client/src/pages/login/login.css
@@ -1,16 +1,20 @@
 .loginMCont {
   width: 100vw;
-  height: 100vh;
+  height: 60vh;
+
+  margin-top: 170px;
 
   display: flex;
-
-  justify-content: center;
+  flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
+
+  /* border: 1px solid black; */
+
 }
 
 .loginCont {
   width: 300px;
-  height: 50vh;
 
   display: flex;
   flex-direction: column;
@@ -34,7 +38,7 @@
 .loginCont>input {
   align-self: flex-start;
   width: 300px;
-  height: 35px;
+  /* height: 35px; */
 
   color: #747474;
   background-color: #f8f9fa;
@@ -43,12 +47,13 @@
   outline: hidden;
 }
 
-.loginCont>button {
-  position: absolute;
-  margin-top: 200px;
+.loginButtonCont {
+  margin-top: 30px;
+}
 
+.loginButton {
   width: 150px;
-  height: 30px;
+  /* height: 30px; */
 
   font-size: 1rem;
   color: #747474;
@@ -57,14 +62,13 @@
   border-radius: 10px;
   font-weight: bold;
 
-  z-index: -1;
+  cursor: pointer;
 }
 
 .loginNewUser {
-  position: absolute;
-  margin-top: 300px;
-
   width: 100vw;
+
+  margin-top: 30px;
 
   font-size: 1.2rem;
   color: #c80f2e;
@@ -72,6 +76,4 @@
 
   display: flex;
   justify-content: center;
-
-  z-index: -1;
 }
