--- a/mern-ecommerce-food-site-client/src/pages/cart/cart.css
+++ b/mern-ecommerce-food-site-client/src/pages/cart/cart.css
@@ -1,6 +1,13 @@
+:root {
+  --backgroundColorVar: #f8f9fa;
+  --textColorVar: #747474;
+  --borderColorVar: #747474;
+}
+
+
 .wrapper {
   overflow-x: auto;
-  white-space: nowrap;
+  /* white-space: nowrap; */
 }
 
 .wrapper table {
@@ -17,15 +24,18 @@ table thead {
 
 table tbody {
   width: 100%;
+  height: 50px;
 }
 
 .wrapper table thead th {
-  border: 1px solid black;
+  border: 1px solid var(--borderColorVar);
+  height: 50px;
 }
 
 .wrapper table tbody td {
-  border: 1px solid black;
+  border: 1px solid var(--borderColorVar);
   text-align: center;
+  height: 50px;
 }
 
 .CTth1 {
@@ -57,10 +67,12 @@ table tbody {
   text-align: center;
   vertical-align: center;
 
-  border: 1px solid black;
+  border: 1px solid var(--borderColorVar);
 
-  width: 30%;
+  width: 120px;
   height: 120px;
+
+  object-fit: cover;
 
   display: flex;
   justify-content: center;
@@ -68,6 +80,13 @@ table tbody {
 }
 
 .ctTd1ImgDetails {
-  padding: 20px;
+  /* padding: 20px; */
+  padding-left: 10px;
   text-align: start;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 5px;
 }
