--- a/mern-ecommerce-food-site-client/src/pages/payment/payment.css
+++ b/mern-ecommerce-food-site-client/src/pages/payment/payment.css
@@ -1,26 +1,252 @@
-body {
-  background: #eee;
+.pMainCont {
+  display: flex;
+
+  justify-content: space-evenly;
+  align-items: flex-start;
+
+  width: 100%;
+  height: 80%;
+
+  margin-top: 70px;
 }
 
-.card {
-  box-shadow: 0 20px 27px 0 rgb(0 0 0 / 5%);
-}
+.pCcMCont {
+  width: 60%;
+  height: 60%;
 
-.card {
-  position: relative;
   display: flex;
   flex-direction: column;
-  min-width: 0;
-  word-wrap: break-word;
-  background-color: #fff;
-  background-clip: border-box;
-  border: 0 solid rgba(0, 0, 0, .125);
-  border-radius: 1rem;
+  justify-content: flex-start;
+  align-items: flex-start;
+
+  border-radius: 15px;
+  border: 1px solid black;
 }
 
-.card-body {
-  -webkit-box-flex: 1;
-  -ms-flex: 1 1 auto;
-  flex: 1 1 auto;
-  padding: 1.5rem 1.5rem;
+
+.pCcTop {
+  width: 100%;
+
+  margin-top: 10px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  /* border: 1px solid black; */
+}
+
+.pCcHeading {
+  margin-left: 30px;
+}
+
+.pCcIcon {
+  margin-right: 30px;
+  font-size: 2rem;
+}
+
+.pCcMiddle {
+  display: flex;
+
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+
+  width: 100%;
+  height: 40px;
+
+  padding-left: 20px;
+
+  margin-top: 40px;
+}
+
+.pCcNumberHeading {}
+
+.pCcNumberText {
+  width: 96%;
+  height: 30px;
+
+
+}
+
+.pCcBottom {
+  width: 96%;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  padding-left: 20px;
+
+  margin-top: 20px;
+  gap: 20px;
+
+  height: 90px;
+
+  /* border: 1px solid black; */
+}
+
+
+.pCcName {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.pCcExp {
+  width: 15%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.pCcCvv {
+  width: 15%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.pCcNameHeading {
+  width: 100%;
+}
+
+.pCcExpHeading {
+  width: 100%;
+}
+
+.pCcCvvHeading {
+  width: 100%;
+}
+
+.pCcNameText {
+  width: 100%;
+}
+
+.pCcExpText {
+  width: 100%;
+}
+
+.pCcCvvText {
+  width: 100%;
+}
+
+.pRightMCont {
+  width: 30%;
+  height: 90%;
+
+  border-radius: 15px;
+  border: 1px solid black;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.pRightCont {
+  width: 90%;
+  height: 90%;
+
+  /* margin-left: 10px; */
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+
+  gap: 10px;
+}
+
+.pRightContP {
+  margin-top: -10px;
+}
+
+.pRightContLine {
+  height: 1px;
+  width: 100%;
+
+  border: 1px solid black;
+}
+
+.pRightContHDiv {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-top: 5px;
+  width: 100%;
+}
+
+.pRightContHDivSt {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin-top: 10px;
+  gap: 10px;
+}
+
+.pRightContHDivStDiv {
+  margin-top: -7px;
+}
+
+.pRightContButton {
+  align-self: center;
+  justify-self: flex-end;
+  border-radius: 5px;
+
+  margin-top: 30px;
+  width: 300px;
+}
+
+.pRightContLinks {
+  text-decoration: underline;
+  color: blue;
+  cursor: pointer;
+}
+
+
+.ptermsBox {
+  position: absolute;
+
+  top: 20vh;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+
+  width: 50vw;
+  height: 50vh;
+  background-color: white;
+
+  overflow-y: scroll;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.ptermsButtonCancel {
+  cursor: pointer;
+
+  position: absolute;
+
+  margin-top: 10px;
+  margin-left: 700px;
+
+  font-size: 2.2rem;
+
+}
+
+.ptermsButtonOk {
+  cursor: pointer;
+}
+
+.ptermsBox>h1 {
+  margin-left: 20px;
+}
+
+.ptermsBox>div {
+  margin-left: 20px;
 }
