--- a/mern-ecommerce-food-site-client/src/pages/userAccount/userAccount.css
+++ b/mern-ecommerce-food-site-client/src/pages/userAccount/userAccount.css
@@ -100,3 +100,33 @@
   /* border: 0.2px solid black; */
   /* outline: hidden; */
 }
+
+.uAccTableCont {
+  width: 90%;
+  height: 100%;
+  border: 1px solid black;
+}
+
+.uAccTableCont>table>thead>tr>th {
+  width: 300px;
+  height: 40px;
+  border: 1px solid black;
+  text-align: center;
+}
+
+.uAccTableCont>table>tbody>tr>td {
+  width: 300px;
+  height: 40px;
+  border: 1px solid black;
+  padding-left: 20px;
+}
+
+.uAccTableCont>table>tbody>tr>td>button {
+  width: 50%;
+  height: 60%;
+  align-self: center;
+  margin-left: 20%;
+
+  box-sizing: content-box;
+  padding: 0;
+}
