--- a/mern-ecommerce-food-site-client/src/components/pastOrderDetails/pastOrderDetails.css
+++ b/mern-ecommerce-food-site-client/src/components/pastOrderDetails/pastOrderDetails.css
@@ -4,17 +4,14 @@
   --borderColorVar: #747474;
 }
 
+.pODMwrapper {
+  width: 80vw;
+  height: 80vh;
 
-.pODwrapper {
-  /* overflow-x: auto; */
-  /* white-space: nowrap; */
-
-  width: 1100px;
-  height: 300p;
   border: 1px solid var(--borderColorVar);
 
   position: absolute;
-  top: 20vh;
+  top: 15px;
   left: 0;
   right: 0;
   margin: 0 auto;
@@ -24,6 +21,17 @@
   align-items: center;
 
   border-radius: 15px;
+
+  background-color: var(--backgroundColorVar);
+}
+
+
+.pODwrapper {
+  width: 100%;
+  height: 80%;
+  margin: 20px;
+
+  overflow-y: auto;
 }
 
 .pODCancel {
@@ -40,17 +48,15 @@
 .pODwrapper table {
   overflow-x: auto;
 
-  width: auto;
-  min-width: 1000px;
-  /* height: 700px; */
-  margin: 40px;
+  width: 100%;
+  height: 100%;
+  /* margin: ; */
 }
 
 table thead {
   width: 100%;
   height: 50px;
 }
-
 
 table tbody {
   width: 100%;
@@ -77,8 +83,6 @@ table tbody {
 .pODth2 {
   text-align: center;
 }
-
-
 
 .pODCont {
   /* text-align: start; */
