--- a/mern-ecommerce-food-site-client/src/components/productZoomed/productZoomed.css
+++ b/mern-ecommerce-food-site-client/src/components/productZoomed/productZoomed.css
@@ -1,18 +1,41 @@
-.pZMCont {
-  position: fixed;
-
-  width: 97%;
-  height: 95vh;
-
-  /* padding-top: 40px; */
-  top: 40px;
-  left: 1.5%;
-
-  /* border: 1px solid black; */
-  background-color: white;
+:root {
+  --backgroundColorVar: #f8f9fa;
+  --textColorVar: #747474;
+  --borderColorVar: #747474;
 }
 
-.pZCont {}
+.pZMCont {
+  width: 80vw;
+  height: 80vh;
+
+  border: 1px solid var(--borderColorVar);
+
+  position: absolute;
+  top: 15px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border-radius: 15px;
+
+  background-color: var(--backgroundColorVar);
+}
+
+.pZCont {
+  width: 90%;
+  height: 90%;
+  margin: 40px;
+  /* margin-top: 50px; */
+
+  /* overflow-y: auto; */
+
+  box-sizing: border-box;
+  /* background-color: blue; */
+}
 
 .pZName {
   padding-top: 2%;
@@ -222,7 +245,7 @@
   padding-top: 2%;
   padding-right: 2%;
 
-  border: 1px solid black;
+  /* border: 1px solid black; */
 
   width: 25%;
   height: 80%;
@@ -258,17 +281,25 @@
 }
 
 .ProductZoomedCheckoutButtonCont {
+  position: absolute;
+
+
   display: flex;
   justify-content: center;
   align-items: center;
+
+  left: 0;
+  right: 0;
+  margin: 0;
+
+  bottom: 10%;
+  /* border: 1px solid black; */
 }
 
 .ProductZoomedCheckoutButton {
   background-color: green;
   color: white;
   font-weight: bold;
-
-  margin-top: 70px;
 
   width: 150px;
   height: 5vh;
