--- a/mern-ecommerce-food-site-client/src/components/pastOrderDetails/pastOrderDetails.css
+++ b/mern-ecommerce-food-site-client/src/components/pastOrderDetails/pastOrderDetails.css
@@ -10,8 +10,8 @@
 
   border: 1px solid var(--borderColorVar);
 
-  position: absolute;
-  top: 15px;
+  position: fixed;
+  top: 7vh;
   left: 0;
   right: 0;
   margin: 0 auto;
