--- a/mern-ecommerce-food-site-client/src/components/productZoomed/productZoomed.css
+++ b/mern-ecommerce-food-site-client/src/components/productZoomed/productZoomed.css
@@ -10,11 +10,12 @@
 
   border: 1px solid var(--borderColorVar);
 
-  position: absolute;
-  top: 15px;
+  position: fixed;
+  top: 7vh;
   left: 0;
   right: 0;
   margin: 0 auto;
+  /* margin-top: 30px; */
 
   display: flex;
   justify-content: center;
