--- a/mern-ecommerce-food-site-client/src/pages/userAccount/userAccount.css
+++ b/mern-ecommerce-food-site-client/src/pages/userAccount/userAccount.css
@@ -102,9 +102,15 @@
 }
 
 .uAccTableCont {
-  width: 90%;
-  height: 100%;
+  width: 98%;
+  height: 80vh;
+  max-height: 78vh;
+
   border: 1px solid black;
+
+  overflow: hidden;
+  overflow-y: auto;
+
 }
 
 .uAccTableCont>table>thead>tr>th {
